--- a/views/cashoutRequest.html
+++ b/views/cashoutRequest.html
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>me
             </div>
         </div>
  <!--   here -->
@@ -77,11 +77,11 @@
                                                 </table>
                                                 <div id="pagination" class="custom-pagination">
                                                     <ul class="pagination" style="float: right;">
-                                                        <li id="prev-page" class="page-item"><a class="page-link" id="prev-page-a" style="border: 1px solid tomato; cursor: pointer;">Prev</a></li>
+                                                        <li id="prev-page-a" class="page-item"><a class="page-link" id="prev-page-a" style="border: 1px solid tomato; cursor: pointer;">Prev</a></li>
                                                         <!-- <li data-tab="tab-1" class="page-item"><a class="page-link" id="tab-1">1</a></li>
                                                         <li data-tab="tab-2" class="page-item"><a class="page-link" id="tab-2">2</a></li>
                                                         <li data-tab="tab-3" class="page-item"><a class="page-link" id="tab-3">3</a></li> -->
-                                                        <li id="next-page" class="page-item"><a class="page-link" id="next-page-a" style="border: 1px solid lightgreen; border-left: 0px; cursor: pointer;">
+                                                        <li id="next-page-a" class="page-item"><a class="page-link" id="next-page-a" style="border: 1px solid lightgreen; border-left: 0px; cursor: pointer;">
                                                            Next
                                                         </a></li>
                                                     </ul>
