--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -186,7 +186,6 @@
         {{#if walletInfo}}
         <script src="js/helpers/api/walletInfo.js"></script>
         <script src="js/helpers/api/disburstApi.js"></script>
-        <script src="js/helpers/api/getCashOutRequest.js"></script>
         {{/if}}
         {{#if fundManagement}}
         <script src="js/helpers/api/fundManagementReason.js"></script>
@@ -226,6 +225,12 @@
         {{/if}}
         {{#if manageDocument}}
         <script src="js/helpers/api/manageDocument.js"></script>
+        {{/if}}
+        {{#if composeMessage}}
+        <script src="js/helpers/api/composeMessage.js"></script>
+        {{/if}}
+        {{#if messageList}}
+        <script src="js/helpers/api/messageList.js"></script>
         {{/if}}
     </body>
     
