--- a/views/walletInfo.html
+++ b/views/walletInfo.html
@@ -52,10 +52,7 @@
                             <div class="review-tab-pro-inner">
                                 <div class="breadcome-heading" style="float: right;">
                                     <form role="search" class="">
-                                        <input type="text" placeholder="Search By Username" class="form-control">
-                                        <a href=""></a>
-                                        
-                                    </form>
+                                  
                                 </div>
                                 <ul id="myTab3" class="tab-review-design">
                                     <li class="active"><a href="#description">All Transactions<label class="label bg-blue" id="allTransactions">---</label></a> </li>
@@ -70,19 +67,15 @@
                                                         <table style="width:100%" class="table table-borderless ">
                                                             <tr>
                                                                 <th>#</th>
-                                                                <th>Action</th>
-                                                                <th>Username</th>
                                                                 <th>Owner</th>
-                                                                <th>Phone</th>
-                                                                <th>Bank</th>
-                                                                <th>Email</th>
+                                                                <th>Remark</th>
+                                                                <th>Sender Username</th>
+                                                                <th>Receiver Username</th>
                                                                 <th>Credit</th>
-                                                                <th>Debit</th>
-                                                                <th>transactionReference</th>
                                                                 <th>Status</th>
                                                                 <th>Created At</th>
                                                             </tr>
-                                                            <tbody id="CashOutRequestDom">
+                                                            <tbody id="allTransactionDom">
                                                                 <tr> 
                                                                    <td style="text-align: center; position: absolute; left: 35%;"> 
                                                                         Fetching Transactions Request, Please wait ...
