--- a/views/settings.html
+++ b/views/settings.html
@@ -192,7 +192,7 @@
                                                             <label>Bank Name</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input id="" type="text" class="form-control" placeholder="">
+                                                        <input id="settingBankEdit" type="text" class="form-control" placeholder="">
                                                     </div>
                                                 
                                                 </div>
@@ -227,7 +227,7 @@
                                                                 <label>Account Number</label>
                                                     <div class="input-group mg-b-pro-edt">
                                                         <span class="input-group-addon"><i class="icon nalika-edit" aria-hidden="true"></i></span>
-                                                        <input id="" type="text" class="form-control" placeholder="">
+                                                        <input id="settingAccountNumberEdit" type="text" class="form-control" placeholder="">
                                                     </div>
 
                                                   
