--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -232,6 +232,9 @@
         {{#if messageList}}
         <script src="js/helpers/api/messageList.js"></script>
         {{/if}}
+        {{#if viewMessage}}
+        <script src="js/helpers/api/viewMessage.js"></script>
+        {{/if}}
     </body>
     
     </html>
