--- a/views/viewMessage.html
+++ b/views/viewMessage.html
@@ -60,29 +60,23 @@
                                     <div class="p-m custom-address-mailbox">
     
                                         <div>
-                                            <span class="font-extra-bold">Subject: </span> Lorem Ipsum has been the industry's standard dummy text ever
+                                            <span class="font-extra-bold">Subject: </span> 
+                                            <span id="subject">----</span>
                                         </div>
                                         <div>
                                             <span class="font-extra-bold">From: </span>
-                                            <a href="#">example.@email.com</a>
+                                            <span id="sender">----</span>
                                         </div>
                                         <div>
-                                            <span class="font-extra-bold">Date: </span> 14.10.2016
+                                            <span class="font-extra-bold">Date: </span>
+                                            <span id="date">----</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="panel-body panel-csm">
                                     <div>
-                                        <h4>Hello Jonathan! </h4>
     
-                                        <p>Dummy text of the printing and typesetting industry. <strong>Lorem Ipsum has been the dustrys</strong> standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
-                                            a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-                                            containing Lorem Ipsum passages, and more
-                                            <br/>
-                                            <br/>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
-                                            a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. recently with.</p>
-    
-                                        <p>Mark Smith
+                                        <p id="content">
                                         </p>
                                     </div>
                                 </div>
