--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -140,7 +140,7 @@
                         </ul>
                     </li>
                          <li>
-                        <a class="logoutAdminBtn" aria-expanded="false"><i class="icon nalika-exit icon-wrap" ></i> <span class="mini-click-non">Logout1</span></a>
+                        <a style="cursor: pointer;" class="logoutAdminBtn" aria-expanded="false"><i class="icon nalika-exit icon-wrap" ></i> <span class="mini-click-non">Logout1</span></a>
           
                     </li>
                 </ul>
@@ -302,7 +302,7 @@
                                                     </li>
                                                     <li><a href="settings"><span class="icon nalika-settings author-log-ic"></span>Profile Settings</a>
                                                     </li>
-                                                    <li><a id="logout"><span class="icon nalika-unlocked author-log-ic logoutAdminBtn"></span> Log Out</a>
+                                                    <li style="cursor: pointer;" class="logoutAdminBtn"><a id="logout" ><span class="icon nalika-unlocked author-log-ic"></span> Log Out</a>
                                                     </li>
                                                   
                                                 </ul>
