--- a/views/settings.html
+++ b/views/settings.html
@@ -101,7 +101,7 @@
                                                                 <label class="font-white">Package:</label>
                                                             </div>
                                                      <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                                                        <label class="font-white" id="settingReferralTitle">----</label>
+                                                        <label class="font-white" id="settingReferralPackage">----</label>
                                                                 <!-- <input type="phone" class="form-control" placeholder="phone" /> -->
                                                     </div>
                                                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
