--- a/views/manageDocument.html
+++ b/views/manageDocument.html
@@ -54,7 +54,7 @@
                                  
                                         <div class="row container-fluid">
                                          
-                                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
                                                     
                                                     <div class="review-content-section">
                                                         <img id="imgPreviewDoc" class="kycImage" id="kycImage" style="width: 30%;" class="editUserSelfie" src="img/notification/file.png" alt="camera" /><br>
@@ -74,7 +74,7 @@
                                                     </div>
                                                 </div>
                                               
-                                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+                                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
                                                
                                                     <div class="review-content-section">
                                                         <img id="imgPreviewUser" class="kycImage" id="kycImage imgPreviewDoc" style="width: 30%;" class="editUserSelfie" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Placeholder_no_text.svg/768px-Placeholder_no_text.svg.png" alt="camera" /><br>
@@ -94,6 +94,27 @@
                                                             </button>
                                                     </div>
                                                 </div>
+                                                   <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 text-center">
+                                               
+                                                    <div class="review-content-section" style="padding-top:28%">
+                                                    <!--     <img id="imgPreviewUser" class="kycImage" id="kycImage imgPreviewDoc" style="width: 30%;" class="editUserSelfie" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ad/Placeholder_no_text.svg/768px-Placeholder_no_text.svg.png" alt="camera" /><br> -->
+                                                   
+                                                    <div class="form-group">
+                                                      
+                                                            <input id="" name="videoTitle" type="text" class="form-control" placeholder="Video Title">
+                                                        </div>
+                                                        <div class="form-group" >
+                                                      
+                                                            <input id="titleUser" name="cvc" type="text" class="form-control" placeholder="Video Url">
+                                                        </div>
+                                                     
+                                                     
+                                                    </div>
+                                                    <div class="text-center custom-pro-edt-ds bottom-pad-button">
+                                                        <button id="addBtnDoc" type="button" class="btn addBtnDoc btn-ctl-bt waves-effect waves-light m-r-10 bg-green" >Upload   
+                                                            </button>
+                                                    </div>
+                                                </div>
                                                 <div class="text-center custom-pro-edt-ds bottom-pad-button">
                                                         <style>
                                                             #uploadSelfieBtn {
@@ -104,6 +125,9 @@
                                                         </button>
                                               
                                                 </div>
+
+
+                                            
                                            
                                         </div>
                              
