--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -6,7 +6,7 @@
         </div> -->
         <div class="nalika-profile">
             <div class="profile-dtl">
-                <a href="#"><img src="img/notification/logo.png" alt="" /></a>
+                <a href="home"><img src="img/notification/logo.png" alt="" /></a>
                 <h5>Admin<span class="min-dtn">Mistrator</span></h5>
             </div>
         <!-- 	<div class="profile-social-dtl">
@@ -91,7 +91,8 @@
                         <ul class="submenu-angle" aria-expanded="false">
                             <li><a title="Mail Content" href="mailContent"><span class="mini-sub-pro">Mail Content</span></a></li>
                             <li><a title="Notifications" href="termsAndPrivacy"><span class="mini-sub-pro">Terms And Privacy</span></a></li>
-                            <li><a title="Notifications" href="defaultImages"><span class="mini-sub-pro">User Default Images</span></a></li>
+                            <li><a title="User Default Image" href="defaultImages"><span class="mini-sub-pro">User Default Images</span></a></li>
+                            
                         
                         </ul>
                     </li>
@@ -297,9 +298,9 @@
                                                     </a>
                                                 <ul role="menu" class="dropdown-header-top author-log dropdown-menu animated zoomIn">
                                                     
-                                                    <li><a href="profile"><span class="icon nalika-user author-log-ic"></span> My Profile</a>
+                                                    <li><a href="register"><span class="icon nalika-user author-log-ic"></span>Register</a>
                                                     </li>
-                                                    <li><a href="settings"><span class="icon nalika-settings author-log-ic"></span> Settings</a>
+                                                    <li><a href="settings"><span class="icon nalika-settings author-log-ic"></span>Profile Settings</a>
                                                     </li>
                                                     <li><a id="logout"><span class="icon nalika-unlocked author-log-ic logoutAdminBtn"></span> Log Out</a>
                                                     </li>
@@ -307,7 +308,7 @@
                                                 </ul>
                                             </li>
                                             <!--Insert 'dropdown' at data-toggle to make dropdown work -->
-                                            <li class="nav-item nav-setting-open"><a href="#" data-toggle="#" role="button" aria-expanded="false" class="nav-link dropdown-toggle"><i class="icon nalika-menu-task"></i></a>
+                                            <li class="nav-item nav-setting-open">
 
                                                 <div role="menu" class="admintab-wrap menu-setting-wrap menu-setting-wrap-bg dropdown-menu animated zoomIn">
                                                     <ul class="nav nav-tabs custon-set-tab">
