--- a/views/termsAndPrivacy.html
+++ b/views/termsAndPrivacy.html
@@ -20,6 +20,8 @@
                                 <ul id="myTab3" class="tab-review-design">
                                     <li class="active"><a href="#termsAndCondition">Terms And Condition</a> </li>
                                     <li><a href="#privacyPolicy">Privacy Policy</a></li>
+                                        <li><a href="#refundPolicy">Refund Policy</a></li>
+                                         <li><a href="#earningDisclaimer">Earning Disclaimer</a></li>
                         
                                 </ul>
                                 <div id="myTabContent" class="tab-content custom-product-edit">
@@ -79,7 +81,62 @@
                                             <div class="col-lg-1"></div>
                                         </div>
                                     </div>
-                                  
+                                    
+                                         
+                                             <div class="product-tab-list tab-pane fade" id="refundPolicy">
+                                        <div class="row container">
+                                            <div class="col-lg-1"></div>
+                                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+                                                <div class="review-content-section">
+                                                    <div class="demo-container">
+                                                        <div class="card-wrapper"></div>
+                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
+                                                      
+                                                       
+                                                            <div class="form-group">
+                                                               
+                                                              
+                                                                    <textarea id="privacyText" class="form-control" type='text'
+                                                                    ></textarea>
+                                                            </div>
+                                                            <div class="text-center credit-card-custom office-pad-bottom">
+                                                                <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
+                                                                <button id="privacyBtn" type="button" class="btn btn-success btn-block ">Send</button>
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-1"></div>
+                                        </div>
+                                    </div>
+                                            <div class="product-tab-list tab-pane fade" id="earningDisclaimer">
+                                        <div class="row container">
+                                            <div class="col-lg-1"></div>
+                                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-12">
+                                                <div class="review-content-section">
+                                                    <div class="demo-container">
+                                                        <div class="card-wrapper"></div>
+                                                        <form class="payment-form mg-t-30 form-border-input-show text-white-label ">
+                                                      
+                                                       
+                                                            <div class="form-group">
+                                                               
+                                                              
+                                                                    <textarea id="privacyText" class="form-control" type='text'
+                                                                    ></textarea>
+                                                            </div>
+                                                            <div class="text-center credit-card-custom office-pad-bottom">
+                                                                <!--      <a href="#!" class="btn bg-btn-cl waves-effect waves-light btn-primary">Submit</a> -->
+                                                                <button id="privacyBtn" type="button" class="btn btn-success btn-block ">Send</button>
+                                                            </div>
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-1"></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
