--- a/views/tree.html
+++ b/views/tree.html
@@ -39,7 +39,7 @@
    <div class="product-cart-area mg-b-30">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="product-cart-inner">
                             <div id="example-basic">
                                <!-- <button>Add New Members</button> -->
@@ -60,7 +60,7 @@
                      
                 </div>
             </div>
-            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                 <div class="product-cart-inner">
                     <div id="example-basic">
                        <!-- <button>Add New Members</button> -->
@@ -77,21 +77,21 @@
                                             text-align: center;
                                             margin: auto;
                                         }
-                                        #downlinerBlock {
+                                        .downlinerBlockStyle {
                                             width: 30px;
                                         }
                                     </style>
-                                    <div class="col-6 mx-auto Downliner" id="downliner">
+                                    <div class="col-6 mx-auto " id="downliner">
                                        
                                     </div>
                                     <div class="table-div">
                                         <table style="width:50%" class="table table-borderless ">
                                             <tr>
-                                                <th style="text-align: center;">Downliners</th>
+                                                <th >Downliners</th>
                                            
                                             </tr>
-                                            <tr id="downlinerBlock">
-                                                <td>  No Downliners Found</td>
+                                            <tr >
+                                                <td id="downlinerBlock" class="">  No Downliners Found</td>
                                             </tr>
                                         </table>
                                     </div>
